fix: Use position:static and regular vertical-align styles on sup and sub to prevent discussion positioning issues

--- a/client/components/Editor/styles/main.scss
+++ b/client/components/Editor/styles/main.scss
@@ -52,3 +52,16 @@ table {
 	/* See https://github.com/ProseMirror/prosemirror/issues/651#issuecomment-313436150 */
 	white-space: pre-wrap !important;
 }
+
+sup,
+sub {
+	position: static;
+}
+
+sub {
+	vertical-align: sub;
+}
+
+sup {
+	vertical-align: super;
+}
